--- a/main.ipynb
+++ b/main.ipynb
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "ppSp9-bNrC-r"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "N8GH-isdSuB5"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -656,7 +656,7 @@
       "metadata": {
         "id": "d6V5tiy3j8Zx"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +693,7 @@
         "id": "ZGC0URDAoWB5",
         "outputId": "bd7d7ea6-85c7-4ebd-fd6e-6518994c3dc7"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1151,6 +1151,16 @@
       "cell_type": "markdown",
       "source": [
         "##Analysis of the Results\n",
+        "\n",
+        "| Service | MAE (€/MW/h) | RMSE (€/MW/h) | R²     |\n",
+        "|---------|--------------|---------------|--------|\n",
+        "| DC-H    | 0.81         | 1.16          | 0.5246 |\n",
+        "| DC-L    | 1.22         | 3.04          | 0.4070 |\n",
+        "| DM-H    | 0.88         | 1.27          | 0.6523 |\n",
+        "| DM-L    | 0.88         | 1.72          | 0.3576 |\n",
+        "| DR-H    | 1.77         | 2.36          | 0.7407 |\n",
+        "| DR-L    | 2.16         | 3.59          | 0.3882 |\n",
+        "\n",
         "###1. Performance Metrics Overview\n",
         "The models were evaluated across six different DFR services (DC-H, DC-L, DM-H, DM-L, DR-H, and DR-L) using three key metrics: Mean Absolute Error (MAE), Root Mean Squared Error (RMSE), and R-squared (R²). Here’s a summary:\n",
         "\n",
@@ -1258,7 +1268,32 @@
         "\n",
         "Key Features: Similar lagged price features are important, but the model struggles to capture the complexity fully.\n",
         "\n",
-        "Insight: The lower performance metrics suggest that DR-L might be influenced by factors not adequately represented in the current feature set."
+        "Insight: The lower performance metrics suggest that DR-L might be influenced by factors not adequately represented in the current feature set.\n",
+        "\n",
+        "###4. Why XGBoost?\n",
+        "Based on these observations:\n",
+        "\n",
+        "- Robust Performance:\n",
+        "XGBoost demonstrates high predictive accuracy, particularly for services with complex non-linear relationships (e.g., DR-H).\n",
+        "\n",
+        "- Data Constraints:\n",
+        "Given the limited dataset, XGBoost outperforms deep learning approaches such as LSTM. Deep learning models generally require more data to generalize effectively.\n",
+        "\n",
+        "- Model Interpretability:\n",
+        "With built-in feature importance and the ability to leverage SHAP values, XGBoost provides valuable insights into the key market drivers—an important aspect for understanding and justifying the forecasting decisions.\n",
+        "\n",
+        "- Efficient Tuning:\n",
+        "The use of Bayesian optimization to fine-tune parameters ensures that the model is robust without overfitting, even with a smaller dataset.\n",
+        "\n",
+        "### R² Performance Comparison Across Models\n",
+        "\n",
+        "| Model             | DC-H (R²) | DC-L (R²) | DM-H (R²) | DM-L (R²) | DR-H (R²) | DR-L (R²) |\n",
+        "|-------------------|-----------|-----------|-----------|-----------|-----------|-----------|\n",
+        "| Linear Regression | 0.4239    | 0.2263    | 0.3662    | 0.1890    | 0.6080    | 0.4166    |\n",
+        "| LightGBM          | 0.2827    | 0.2633    | 0.5983    | 0.2987    | 0.7637    | 0.4174    |\n",
+        "| Random Forest     | 0.4324    | 0.3036    | 0.6255    | 0.2531    | 0.7529    | 0.3718    |\n",
+        "| XGBoost+LSTM      | 0.3490    | 0.3611    | 0.2027    | 0.2242    | 0.3772    | 0.2529    |\n",
+        "| **XGBoost**       | 0.5246    | 0.4070    | 0.6523    | 0.3576    | 0.7407    | 0.3882    |"
       ],
       "metadata": {
         "id": "PQCoCNhVNmSN"
@@ -1268,7 +1303,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "u17IQH_nYepF"
+        "id": "4NoPCy4Q38r4"
       },
       "execution_count": null,
       "outputs": []
